css/style.css
/* ... */
/* FOR DEV PURPOSES ONLY */
.demo .column {
    padding: 1em;
    background: #ddd;
    text-align: center;
}
.demo .column p {
    margin: 0;
    padding: 0 0.5em;
    max-width: none;
}
.demo {
    padding: 2em 0;
}
.demo:after {
    position: fixed;
    top: 0;
    left: 0;
    padding: 5px;
    text-align: center;
    width: 100%;
    content: "Small (less than 768px)";
    color: #fff;
    background: #883333;
}

@media (min-width: 768px) {
    body.demo:after {
        content: "Medium (768px - 1049px)";
        background: #bcb83d;
    }
}
@media (min-width: 1050px) {
    body.demo:after {
        content: "Large (1050px - 1249px)";
        background: #669933;
    }
}
@media (min-width: 1250px) {
    body.demo:after {
        content: "Extra Large (1250px +)";
        background: #0099cc;
    }
}
.demo .column p:last-child {
    margin-bottom: 0;
}

/* SITE STRUCTURE */
/* Header& Footer */
body {
    background: rgba(234, 245, 251, 1);
}

/* Header & Footer */
.site-header a {
    color: rgba(76, 70, 70, 1);
    /* font-family: museo-sans, sans-serif;
    font-weight: 300;
    font-style: normal; */
}

.site-footer a {
    color: rgba(76, 70, 70, 1);
}
.site-header a:hover, .site-footer a:hover {
    /* color: rgb(171, 55, 99); */
    color: rgba(183, 88, 88, 1);
    text-decoration: none;
}

/* Header Only */
.site-header {
    background-color: transparent;
    /* border-bottom: 0px solid #ccc; */
    padding: 0.5em 1em;
    justify-content: space-between;
}
.site-header.on-top {
    position: absolute;
    width: 100%;
}
@media (min-width: 768px) {
    .site-header {
        display: flex;
        justify-content: space-between;
        padding-top: 0.75em;
    }
}

/* Site ID */
.site-id {
    text-align: center;
    
}
.site-id h1 {
    font-size: 1.5em;
    font-weight: normal;
    font-style: normal;
    margin: 0;
    color: #999;
}
.site-id h1 a {
    font-weight: bold;
    display: inline-block;
    color: rgba(234, 245, 251, 1);
}

/* Footer Only */
.site-footer {
    background-color: rgba(234, 245, 251, 1);
    border-top: 0px solid #ccc;
    padding-top: 3em;
    text-align: center;
    background-image: url(../img/footer-deco.jpg);
    background-position: 50% 100%;
    background-repeat: no-repeat;
    .container {
        padding-top: 0.25em;
        padding-bottom: 0.25em;
        @media (min-width: 768px) {
            display: flex;
            justify-content: center;
            padding-bottom: 0.5em;
        }
    }
    h3 {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 0;
    }
    .no-deco {
        margin: 0;
        ul {
            margin-top: 0;
            padding-top: 5px;
            @media (min-width: 768px) { 
                text-align: left;
            }
        }
    }
    /* -90deg rotate */
    .rotate-vert-n{
        
        @media (min-width: 768px) {
            writing-mode: sideways-lr;
            align-content: end;
            margin-top: 0;
            h5 {
            font-size: 15px;
            }    
        }
    }
    .link-icons {
        margin-top: 1em;
        display: flex;
        position: relative;
        justify-content: center;
        .mail svg:hover {
            color: rgba(183, 88, 88, 1);
            
            
        }
    }
    .site-footer-nav {
        ul {
            list-style: none;
            margin: 0;
            padding-left: 0;
            padding-top: 5px;      
        }
    }
    .footer-logo {
        a img{
            height: 65px;
            width: auto;
            object-fit: cover;
            margin: auto;
        }
    }
}
/* MOBILE FOOTER */
@media (max-width: 768px) {
    .site-footer .row {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 1.5em;
        flex-wrap: wrap;
        justify-content: space-between;
        gap: 0;
        .site-footer-nav {
            padding-bottom: 1em;
        }
        .link-icons {
            margin: 0;
            padding-bottom: 1em;
        }
        h5 {
            margin: 0;
            font-size: 1.125em;
            text-decoration-line: underline;
        }
    }
    .site-footer .column {
        width: 100%;
        text-align: center;
        margin: 0 auto;
    }
}

/* Main Site Section (Main Content Area) */
.site-main {
    background: rgba(234, 245, 251, 1);
    h1 {
        display: flex;
        align-items: center;
        justify-content: center;
    }
    padding-bottom: 3em;
}

/* Main Sections */
section {
    padding: 1.5em 0;
}

/* Hero Sections */
.container .hero {
    position: relative;
    text-align: center;
    /* top: 2em;
    margin-bottom: 3em; */
}

.hero {
    border-top: none;
    /* padding: 8em 1em 8em 1em; */
    /* margin-bottom: 1.5em; */
    min-height: 100svh;
    display: grid;
    place-items: center;
    padding: 10svh 1em;
    /* background-image: url(../img/hero_v2.jpg); */
    background-size: cover;
    background-position: center bottom;
    background-color: rgba(136, 190, 136, 1);
}
.hero h4 {
    color: rgba(253, 247, 223, 1);
    margin-top: 1em;
    margin-bottom: 0;
    font-family: museo-sans, sans-serif;
    font-weight: 300;
    font-style: normal
}
.hero .h1-left, .hero .h1-right {
    font-size: 96px;
    align-items: normal;
    margin: 0;
    margin-bottom: 10px;
    color: rgba(251, 253, 223, 1);
    text-transform: uppercase;
}
.hero .h1-left {
    justify-content: left; 
}
.hero .h1-right {
    justify-content: right;
}

.hero h1, .hero h2 {
    font-style: 3em;
    line-height: 1.1em;
    min-width: 10em;
    max-width: 20em;
    margin-bottom: 10px;
}
.hero p {
    max-width: 960px;
    display: flex;
    align-items: center;
    justify-content: center;
    a.button {
        margin: 5px;
    }
}
/* ... */

